new bootstrap template

--- a/database/app/chair/chair.component.html
+++ b/database/app/chair/chair.component.html
@@ -10,10 +10,10 @@
     <br>
     <br>
     <div class="row">
-        <div class="col-xs-2">
+        <div class="col-lg-2 col-xs-2">
             <pressure></pressure>
         </div>
-        <div class="col-xs-10">
+        <div class="col-lg-10 col-xs-10">
             <linechart></linechart>
         </div>
     </div>
