--- a/database/app/app.component.html
+++ b/database/app/app.component.html
@@ -1,7 +1,34 @@
-<div id="wrapper">
+<div class="bg-dark dk" id="wrap">
+    <sc-header></sc-header>
+    <navbar></navbar>
+    <div id="content">
+        <div class="outer">
+            <div class="inner bg-light lter" style="min-height: 72%">
+                <div class="col-lg-12">
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="right" class="bg-light lter"></div>
+</div>
+<sc-footer></sc-footer>
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<div id="wrapper">
     <navbar></navbar>
     <div id="page-wrapper">
         <router-outlet></router-outlet>
     </div>
     <sc-footer></sc-footer>
-</div>
+</div>-->
