--- a/database/app/dashboard/dashboard.component.html
+++ b/database/app/dashboard/dashboard.component.html
@@ -1,26 +1,15 @@
 <div class="row">
     <div class="col-xs-12">
-        <br>
         <h1>
             Dashboard
         </h1>
-        <br>
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        <div class="row">
-            <div class="col-xs-2" *ngFor="let chair of chairs">
-                <a routerLink="/chair/{{chair.uuid}}">
-                    <button type="button" class="btn btn-primary btn-circle btn-xl">
-                        <img border="0" alt="Chair" src="../../images/chair.png" height="37" width="37">
-                    </button>
-                    <h5>
-                        {{chair.uuid}}
-                    </h5>
-                </a>
-
-            </div>
-        </div>
+    <div>
+        <a *ngFor="let chair of chairs" class="quick-btn" style="height: 160px; width: 200px;" routerLink="/chair/{{chair.uuid}}">
+            <img border="0" alt="Chair" src="../../images/chair.png" height="70%" width="50%">
+            <span style="overflow:hidden;">{{chair.uuid}}</span>
+        </a>
     </div>
 </div>
