--- a/database/app/navbar/navbar.component.html
+++ b/database/app/navbar/navbar.component.html
@@ -1,4 +1,30 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+<div id="left">
+    <ul id="menu" class="bg-dark dker">
+        <li>
+            <a routerLink="/dashboard">Dashboard</a>
+        </li>
+        <li class="nav-divider"></li>
+        <li class="nav-header">Available Chairs</li>
+        <li class="nav-divider"></li>
+        <li *ngFor="let chair of chairs">
+            <a routerLink="/chair/{{chair.uuid}}">{{chair.uuid}}</a>
+        </li>
+        <li class="nav-divider"></li>
+        <li>
+            <a routerLink="">
+                Placeholder
+            </a>
+        </li>
+        <li>
+            <a routerLink="">
+                This is a placeholder for an extraordinary long text.
+            </a>
+        </li>
+    </ul>
+</div>
+
+
+<!--<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
     <div class="navbar-header">
         <a class="navbar-brand" href="/">Project CLARC</a>
     </div>
@@ -32,4 +58,4 @@
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation" style="margin-bottom: 0">
     <div class="navbar-header">
     </div>
-</nav>
+</nav>-->
