Add Rest handlers

--- a/middleware/src/resources/style.css
+++ b/middleware/src/resources/style.css
@@ -2,12 +2,13 @@
 {
 	margin: auto;
 	background-color: #fdffc6;
-	max-width: 400px;
+	max-width: 800px;
 }
 
 .midalign
 {
 	margin: auto;
-	margin-bottom: 3px;
+	margin-bottom: 5px;
+	margin-top: 5px;
 	text-align: center;
 }
